changed self-description, added language I speak and tools I use

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<!-- Landing section -->
 		<section id="landing" class="jumbotron text-center mt-3" >
 			<h1>Full Stack Web Developer</h1>
-			<p>Hi! I'm Mariclar and I love coffee</p>
+			<p>Hi! I'm Mariclar and I love coffee and cats</p>
 			<img class="img-fluid" src="images/coffee.jpg"/>
 		</section>
 
@@ -65,6 +65,7 @@
 				<ul>
 					<li>HTML</li>
 					<li>CSS</li>
+					<li>Java</li>
 				</ul>
 			</div>
 
@@ -75,6 +76,7 @@
 					<li>Sublime</li>
 					<li>Github</li>
 					<li>Google Chrome</li>
+					<li>Eclipse</li>
 				</ul>
 			</div>
 		</section>
