--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<title>MARICLAR GEPILANO | WEB DEVELOPER PORTFOLIO</title>
+	<title>MARICLAR GEPILANO</title>
 
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,11 +36,27 @@
 		  		-->
 
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#landing">Home</a>
+		        <a class="nav-link" href="#landing">HOME</a>
 		      </li>
 
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#gallery">Gallery</a>
+		        <a class="nav-link" href="#gallery">MENU</a>
+		      </li>
+
+		      <li class="nav-item active">
+		        <a class="nav-link" href="#">ORDER NOW</a>
+		      </li>
+
+		      <li class="nav-item active">
+		        <a class="nav-link" href="#">OUR STORY</a>
+		      </li>
+
+		      <li class="nav-item active">
+		        <a class="nav-link" href="#">CONTACT</a>
+		      </li>
+
+		      <li class="nav-item active">
+		        <a class="nav-link" href="#">LOGIN</a>
 		      </li>
 
 		    </ul>
@@ -53,7 +69,7 @@
 
 		<!-- Landing section -->
 		<section id="landing" class="jumbotron text-center mt-3" >
-			<h1>Full Stack Web Developer</h1>
+			<h1>The KopiKat </h1>
 			<p>Hi! I'm Mariclar and I love coffee and cats</p>
 			<img class="img-fluid" src="images/coffee.jpg"/>
 		</section>
