--- a/home.html
+++ b/home.html
@@ -10,7 +10,10 @@
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 
 	<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -20,7 +23,7 @@
 </head>
 <body>
 	<!-- Navbar -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top">
+	<nav class="navbar navbar-expand-lg fixed-top">
     	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="navbar-toggler-icon"></span>
   		</button>
@@ -36,27 +39,27 @@
 		  		-->
 
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#landing">HOME</a>
+		        <a class="nav-link" href="home.html">HOME</a>
 		      </li>
 
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#gallery">MENU</a>
+		        <a class="nav-link" href="menu.html">MENU</a>
 		      </li>
 
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#">ORDER NOW</a>
+		        <a class="nav-link" href="order.html">ORDER NOW</a>
 		      </li>
 
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#">OUR STORY</a>
+		        <a class="nav-link" href="story.html">OUR STORY</a>
 		      </li>
 
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#">CONTACT</a>
+		        <a class="nav-link" href="contact.html">CONTACT</a>
 		      </li>
 
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#">LOGIN</a>
+		        <a class="nav-link" href="login.html">LOGIN</a>
 		      </li>
 
 		    </ul>
@@ -65,17 +68,19 @@
 	</nav>
 
 	<!-- Container for our layout -->
-	<div class="container-fluid">
+	<!-- <div class="container-fluid"> -->
 
 		<!-- Landing section -->
 		<section id="landing" class="jumbotron text-center mt-3" >
+			<div class="tools">
 			<h1>The KopiKat </h1>
-			<p>Hi! I'm Mariclar and I love coffee and cats</p>
+			<p>Taste as good as it smells.</p>
+			</div>
 			<img class="img-fluid" src="images/coffee.jpg"/>
 		</section>
 
 		<!-- Gallery section -->
-		<section id="gallery" class="text-center bg-dark">
+		<section id="gallery" class="text-center">
 			<div class="tools">
 				<h2>Languages I Speak</h2>
 				<ul>
@@ -96,7 +101,7 @@
 				</ul>
 			</div>
 		</section>
-	</div>
+	<!-- </div> -->
 
 	<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
